--- a/part2/physicsmodels/index.html
+++ b/part2/physicsmodels/index.html
@@ -266,26 +266,26 @@ rate           4.76  1.47
 deltaS  lnN    1.20    -    20% uncertainty on signal
 deltaB  lnN      -   1.50   50% uncertainty on background
 </code></pre>
-<p>If we run <code>text2workspace.py</code> on this datacard and take a look at the workspace (<code>w</code>) inside the <code>.root</code> file produced, we will find a number of different objects representing the signal, background, and observed event rates, as well as the nuisance parameters and signal strength <strong>r</strong>.</p>
+<p>If we run <code>text2workspace.py</code> on this datacard and take a look at the workspace (<code>w</code>) inside the <code>.root</code> file produced, we will find a number of different objects representing the signal, background, and observed event rates, as well as the nuisance parameters and signal strength <span class="arithmatex"><span class="MathJax_Preview">r</span><script type="math/tex">r</script></span>. Note that often in the statistics literature, this parameter is referred to as <span class="arithmatex"><span class="MathJax_Preview">\mu</span><script type="math/tex">\mu</script></span>. </p>
 <p>From these objects, the necessary PDF has been constructed (named <code>model_s</code>). For this counting experiment we will expect a simple PDF of the form</p>
 <div class="arithmatex">
 <div class="MathJax_Preview">
-p(n_{\mathrm{obs}}| r,\delta_{S},\delta_{B})\propto
-\dfrac{[r\cdot n_{S}(\delta_{S})+n_{B}(\delta_{B})]^{n_{\mathrm{obs}}} }
-{n_{\mathrm{obs}}!}e^{-[r\cdot n_{S}(\delta_{S})+n_{B}(\delta_{B})]}
-\cdot e^{-\frac{1}{2}(\delta_{S}- \delta_{S}^{\mathrm{In}})^{2}}
-\cdot e^{-\frac{1}{2}(\delta_{B}- \delta_{B}^{\mathrm{In}})^{2}}
+p(n_{\mathrm{obs}}| r,\nu_{S},\nu_{B})\propto
+\dfrac{[r\cdot n_{S}(\nu_{S})+n_{B}(\nu_{B})]^{n_{\mathrm{obs}}} }
+{n_{\mathrm{obs}}!}e^{-[r\cdot n_{S}(\nu_{S})+n_{B}(\nu_{B})]}
+\cdot e^{-\frac{1}{2}(\nu_{S}- y_{S})^{2}}
+\cdot e^{-\frac{1}{2}(\nu_{B}- y_{B})^{2}}
 </div>
 <script type="math/tex; mode=display">
-p(n_{\mathrm{obs}}| r,\delta_{S},\delta_{B})\propto
-\dfrac{[r\cdot n_{S}(\delta_{S})+n_{B}(\delta_{B})]^{n_{\mathrm{obs}}} }
-{n_{\mathrm{obs}}!}e^{-[r\cdot n_{S}(\delta_{S})+n_{B}(\delta_{B})]}
-\cdot e^{-\frac{1}{2}(\delta_{S}- \delta_{S}^{\mathrm{In}})^{2}}
-\cdot e^{-\frac{1}{2}(\delta_{B}- \delta_{B}^{\mathrm{In}})^{2}}
+p(n_{\mathrm{obs}}| r,\nu_{S},\nu_{B})\propto
+\dfrac{[r\cdot n_{S}(\nu_{S})+n_{B}(\nu_{B})]^{n_{\mathrm{obs}}} }
+{n_{\mathrm{obs}}!}e^{-[r\cdot n_{S}(\nu_{S})+n_{B}(\nu_{B})]}
+\cdot e^{-\frac{1}{2}(\nu_{S}- y_{S})^{2}}
+\cdot e^{-\frac{1}{2}(\nu_{B}- y_{B})^{2}}
 </script>
 </div>
-<p>where the expected signal and background rates are expressed as functions of the nuisance parameters, <span class="arithmatex"><span class="MathJax_Preview">n_{S}(\delta_{S}) = 4.76(1+0.2)^{\delta_{S}}~</span><script type="math/tex">n_{S}(\delta_{S}) = 4.76(1+0.2)^{\delta_{S}}~</script></span> and <span class="arithmatex"><span class="MathJax_Preview">~n_{B}(\delta_{B}) = 1.47(1+0.5)^{\delta_{B}}</span><script type="math/tex">~n_{B}(\delta_{B}) = 1.47(1+0.5)^{\delta_{B}}</script></span>.</p>
-<p>The first term represents the usual Poisson expression for observing <span class="arithmatex"><span class="MathJax_Preview">n_{\mathrm{obs}}</span><script type="math/tex">n_{\mathrm{obs}}</script></span> events, while the second two are the Gaussian constraint terms for the nuisance parameters. In this case <span class="arithmatex"><span class="MathJax_Preview">{\delta^{\mathrm{In}}_S}={\delta^{\mathrm{In}}_B}=0</span><script type="math/tex">{\delta^{\mathrm{In}}_S}={\delta^{\mathrm{In}}_B}=0</script></span>, and the widths of both Gaussians are 1.</p>
+<p>where the expected signal and background rates are expressed as functions of the nuisance parameters, <span class="arithmatex"><span class="MathJax_Preview">n_{S}(\nu_{S}) = 4.76(1+0.2)^{\nu_{S}}~</span><script type="math/tex">n_{S}(\nu_{S}) = 4.76(1+0.2)^{\nu_{S}}~</script></span> and <span class="arithmatex"><span class="MathJax_Preview">~n_{B}(\nu_{B}) = 1.47(1+0.5)^{\nu_{B}}</span><script type="math/tex">~n_{B}(\nu_{B}) = 1.47(1+0.5)^{\nu_{B}}</script></span>. The <span class="arithmatex"><span class="MathJax_Preview">y_{S},~y_{B}</span><script type="math/tex">y_{S},~y_{B}</script></span> are the auxiliary observables. In the code, these will have the same name as the corresponding nuisance parameter, with the extension <code>_In</code>. </p>
+<p>The first term represents the usual Poisson expression for observing <span class="arithmatex"><span class="MathJax_Preview">n_{\mathrm{obs}}</span><script type="math/tex">n_{\mathrm{obs}}</script></span> events, while the second two are the Gaussian constraint terms for the nuisance parameters. In this case <span class="arithmatex"><span class="MathJax_Preview">{y_S}={y_B}=0</span><script type="math/tex">{y_S}={y_B}=0</script></span>, and the widths of both Gaussians are 1.</p>
 <p>A combination of counting experiments (or a binned shape datacard) will look like a product of PDFs of this kind. For parametric/unbinned analyses, the PDF for each process in each channel is provided instead of the using the Poisson terms and a product runs over the bin counts/events.</p>
 <h2 id="model-building">Model building</h2>
 <p>For more complex models, <code>PhysicsModels</code> can be produced. To use a different physics model instead of the default one, use the option <code>-P</code> as in</p>
@@ -450,34 +450,34 @@ for an example. However, the computational performance scales quadratically
 with the number of POIs, and can get extremely expensive for 10 or more, as may
 be encountered often with EFT analyses. To alleviate this issue, an accelerated
 interference modeling technique is implemented for template-based analyses via
-the <code>interferenceModel</code> physics model. In this model, each bin yield <span class="arithmatex"><span class="MathJax_Preview">y</span><script type="math/tex">y</script></span> is parameterized</p>
+the <code>interferenceModel</code> physics model. In this model, each bin yield <span class="arithmatex"><span class="MathJax_Preview">w</span><script type="math/tex">w</script></span> is parameterized</p>
 <div class="arithmatex">
 <div class="MathJax_Preview">
-y(\theta) = y_0 (\theta^\top M \theta)
+w(\vec{\mu}) = w_0 (\vec{\mu}^\top M \theta)
 </div>
 <script type="math/tex; mode=display">
-y(\theta) = y_0 (\theta^\top M \theta)
+w(\vec{\mu}) = w_0 (\vec{\mu}^\top M \theta)
 </script>
 </div>
-<p>as a function of the POI vector <span class="arithmatex"><span class="MathJax_Preview">\theta</span><script type="math/tex">\theta</script></span>, a nominal template <span class="arithmatex"><span class="MathJax_Preview">y_0</span><script type="math/tex">y_0</script></span>, and a scaling matrix <span class="arithmatex"><span class="MathJax_Preview">M</span><script type="math/tex">M</script></span>.
+<p>as a function of the POI vector <span class="arithmatex"><span class="MathJax_Preview">\vec{\mu}</span><script type="math/tex">\vec{\mu}</script></span>, a nominal template <span class="arithmatex"><span class="MathJax_Preview">w_0</span><script type="math/tex">w_0</script></span>, and a scaling matrix <span class="arithmatex"><span class="MathJax_Preview">M</span><script type="math/tex">M</script></span>.
 To see how this parameterization relates to that of the previous section, we can define:</p>
 <div class="arithmatex">
 <div class="MathJax_Preview">
-y_0 = A_b^2, \qquad
+w_0 = A_b^2, \qquad
 M = \frac{1}{A_b^2} \begin{bmatrix}
  |A_s|^2 &amp; \Re(A_s^* A_b) \\
  \Re(A_s A_b^*) &amp; |A_b|^2
- \end{bmatrix}, \qquad \theta = \begin{bmatrix}
+ \end{bmatrix}, \qquad \vec{\mu} = \begin{bmatrix}
  \sqrt{\mu} \\
  1
  \end{bmatrix}
 </div>
 <script type="math/tex; mode=display">
-y_0 = A_b^2, \qquad
+w_0 = A_b^2, \qquad
 M = \frac{1}{A_b^2} \begin{bmatrix}
  |A_s|^2 & \Re(A_s^* A_b) \\
  \Re(A_s A_b^*) & |A_b|^2
- \end{bmatrix}, \qquad \theta = \begin{bmatrix}
+ \end{bmatrix}, \qquad \vec{\mu} = \begin{bmatrix}
  \sqrt{\mu} \\
  1
  \end{bmatrix}
