deploy: 8a0c64a9896dcc371258aeae21481b0038c4e468

--- a/tutorial2023_unfolding/unfolding_exercise/index.html
+++ b/tutorial2023_unfolding/unfolding_exercise/index.html
@@ -254,7 +254,9 @@
 <h2 id="getting-started">Getting started</h2>
 <p>To get started, you should have a working setup of Combine and CombineHarvester. This setup can be done following any of the <a href="https://cms-analysis.github.io/HiggsAnalysis-CombinedLimit/#installation-instructions">installation instructions</a>.</p>
 <p>After setting up CMSSW, you can access the working directory for this tutorial which contains all of the inputs and scripts needed to run the unfolding fitting exercise:</p>
-<pre><code class="language-shell">cd $CMSSW_BASE/src/HiggsAnalysis/CombinedLimit/data/tutorials/tutorial_unfolding_2023/
+<pre><code class="language-shell">cd $CMSSW_BASE/src/
+git clone https://gitlab.cern.ch/cms-analysis/general/combine-unfolding-tutorial-2023.git
+cd combine-unfolding-tutorial-2023
 </code></pre>
 <h2 id="exercise-outline">Exercise outline</h2>
 <p>The hands-on exercise is split into seven parts: </p>
