--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ git checkout v7.0.13
 scramv1 b clean; scramv1 b # always make a clean build
 </code></pre>
 <h2 id="oustide-of-cmssw-recommended-for-non-cms-users">Oustide of CMSSW (recommended for non-CMS users)</h2>
-<p>Pre-compiled versions of the tool are available as containers from the <a href="https://gitlab.cern.ch/cms-cloud/combine-standalone">CMS cloud pages</a>. These containers can be downloaded and run using <a href="https://cms-opendata-guide.web.cern.ch/tools/docker/">Docker</a>. If you have docker running you can pull and run the <em>latest</em> version using, </p>
+<p>Pre-compiled versions of the tool are available as container images from the <a href="[https://gitlab.cern.ch/cms-cloud/combine-standalone](https://gitlab.cern.ch/cms-cloud/combine-standalone/container_registry/15235)">CMS cloud</a>. These containers can be downloaded and run using <a href="https://cms-opendata-guide.web.cern.ch/tools/docker/">Docker</a>. If you have docker running you can pull and run the <em>latest</em> image using, </p>
 <pre><code class="language-sh">docker run --name combine -it gitlab-registry.cern.ch/cms-cloud/combine-standalone:latest
 </code></pre>
 <p>You will now have the compiled <code>combine</code> binary available as well as the complete package of tool. 
@@ -533,5 +533,5 @@ See <a href="https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit/blob/ma
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2024-02-08 13:35:47.921755+00:00
+Build Date UTC : 2024-02-15 13:41:32.883062+00:00
 -->
