deploy: 4182da7dddc98c939bedd1b0df49fe10effe5d7e

--- a/part3/nonstandard/index.html
+++ b/part3/nonstandard/index.html
@@ -435,7 +435,7 @@ A discontinuity in the NLL function or its derivatives at or near the minimum.</
 <tbody>
 <tr>
 <td><strong><code>data</code></strong></td>
-<td><code>TGraphAsymmErrors</code> containing the observed data (or toy data if using <code>-t</code>). The vertical error bars correspond to the 68% interval for a Poisson distribution centered on the observed count.</td>
+<td><code>TGraphAsymmErrors</code> containing the observed data (or toy data if using <code>-t</code>). The vertical error bars correspond to the 68% interval for a Poisson distribution centered on the observed count (Garwood intervals), following the <a href="https://twiki.cern.ch/twiki/bin/view/CMS/PoissonErrorBars">recipe provided by the CMS Statistics Committee</a>.</td>
 </tr>
 <tr>
 <td><strong><code>$PROCESS</code></strong> (id &lt;= 0)</td>
