deploy: 81878b6f689005e6ec830ede22e1a28e89b516f6

--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
 These pages document the
 <a href="https://twiki.cern.ch/twiki/bin/view/RooStats/WebHome">RooStats</a> /
 <a href="https://root.cern.ch/roofit">RooFit</a> - based software tool used for
-statistical analysis within the CMS experiment - <span style="font-variant:small-caps;">Combine</span>. Note that while this tool was originally developed in the <a href="HiggsWG">Higgs PAG</a>, its usage is now widespread within CMS. </p>
+statistical analysis within the CMS experiment - <span style="font-variant:small-caps;">Combine</span>. Note that while this tool was originally developed in the Higgs Physics Analysis Group (PAG), its usage is now widespread within CMS. </p>
 <p><span style="font-variant:small-caps;">Combine</span> provides a command-line interface to many different statistical techniques, available inside RooFit/RooStats, that are used widely inside CMS.</p>
 <p>The package exists on GitHub under <a href="https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit">https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit</a></p>
 <p>For more information about Git, GitHub and its usage in CMS, see <a href="http://cms-sw.github.io/cmssw/faq.html">http://cms-sw.github.io/cmssw/faq.html</a></p>
