deploy: 87a3dfa272157beaeafbb5f6ff03b9b86ad2fb57

--- a/part2/physicsmodels/index.html
+++ b/part2/physicsmodels/index.html
@@ -1177,7 +1177,8 @@ p(n_{\mathrm{obs}}| r,\nu_{S},\nu_{B})\propto
   raise RuntimeError, &quot;Unknown production mode '%s'&quot; % production
 </code></pre>
 <p>You should note that <code>text2workspace</code> will look for the python module in <code>PYTHONPATH</code>. If you want to keep your model local, you'll need to add the location of the python file to <code>PYTHONPATH</code>.</p>
-<p>A number of models used in the LHC Higgs combination paper can be found in <a href="https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit/blob/main/python/LHCHCGModels.py">LHCHCGModels.py</a>. These can be easily accessed by providing for example <code>-P HiggsAnalysis.CombinedLimit.HiggsCouplings:c7</code> and others defined un <a href="https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit/blob/main/python/HiggsCouplings.py">HiggsCouplings.py</a>.</p>
+<p>A number of models used in the LHC Higgs combination paper can be found in <a href="https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit/blob/main/python/LHCHCGModels.py">LHCHCGModels.py</a>. </p>
+<p>The models can be applied to the datacard by using the <code>-P</code> option, for example <code>-P HiggsAnalysis.CombinedLimit.HiggsCouplings:c7</code>, and others that are defined in <a href="https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit/blob/main/python/HiggsCouplings.py">HiggsCouplings.py</a>. </p>
 <p>Below are some (more generic) example models that also exist in GitHub.</p>
 <h3 id="multisignalmodel-ready-made-model-for-multiple-signal-processes">MultiSignalModel ready made model for multiple signal processes</h3>
 <p><span style="font-variant:small-caps;">Combine</span> already contains a model <strong><code>HiggsAnalysis.CombinedLimit.PhysicsModel:multiSignalModel</code></strong> that can be used to assign different signal strengths to multiple processes in a datacard, configurable from the command line.</p>
