deploy: 01ff06261bc59d98c9d594b3c0a3d3ffc20459cc

--- a/part5/roofit/index.html
+++ b/part5/roofit/index.html
@@ -1677,9 +1677,12 @@ canv = ROOT.TCanvas()
 gr.Draw(&quot;ALP&quot;)
 canv.SaveAs(&quot;likelihoodscan.pdf&quot;)
 </code></pre>
-<p>Well, this is doable - but we were only looking at a simple one-bin counting experiment. This might become rather cumbersome for large models... <span class="arithmatex"><span class="MathJax_Preview">[*]</span><script type="math/tex">[*]</script></span>
-We will now switch to <span style="font-variant:small-caps;">Combine</span> which will make it a lot easier to set up your model and do the statistical analysis than trying to build the likelihood yourself.</p>
-<p><span class="arithmatex"><span class="MathJax_Preview">[*]</span><script type="math/tex">[*]</script></span> Side note - <code>RooFit</code> does have additional functionality to help with statistical model building, but we will not go into detail today.   </p>
+<p>Well, this is doable - but we were only looking at a simple one-bin counting experiment. This might become rather cumbersome for large models... <span class="arithmatex"><span class="MathJax_Preview">[*]</span><script type="math/tex">[*]</script></span></p>
+<p>For the next set ot tutorials, we will now switch to working with <span style="font-variant:small-caps;">Combine</span> that will help in building the statistical model and do the statistical analysis, instead of  building the likelihood with <code>RooFit</code>.</p>
+<div class="admonition info">
+<p class="admonition-title">Info</p>
+<p><code>RooFit</code> does have additional functionality to help with statistical model building, but we will not go into detail in these tutorials.   </p>
+</div>
 
 
 
