--- a/tutorial2023/parametric_exercise/index.html
+++ b/tutorial2023/parametric_exercise/index.html
@@ -1555,7 +1555,8 @@
 <h1 id="parametric-models-in-combine">Parametric Models in Combine</h1>
 <h2 id="getting-started">Getting started</h2>
 <p>By now you should have a working setup of Combine v9 from the pre-tutorial exercise. If so then move onto the cloning of the parametric fitting exercise gitlab repo below. If not then you need to set up a CMSSW area and checkout the combine package:</p>
-<pre><code class="language-shell">cmsrel CMSSW_11_3_4
+<pre><code class="language-shell">cmssw-el7
+cmsrel CMSSW_11_3_4
 cd CMSSW_11_3_4/src
 cmsenv
 git clone https://github.com/cms-analysis/HiggsAnalysis-CombinedLimit.git HiggsAnalysis/CombinedLimit
@@ -1563,7 +1564,7 @@ cd HiggsAnalysis/CombinedLimit
 
 cd $CMSSW_BASE/src/HiggsAnalysis/CombinedLimit
 git fetch origin
-git checkout v9.0.0
+git checkout v9.1.0
 </code></pre>
 <p>We will also make use of another package, <code>CombineHarvester</code>, which contains some high-level tools for working with combine. The following command will download the repository and checkout just the parts of it we need for this exercise:</p>
 <pre><code class="language-shell">cd $CMSSW_BASE/src/
@@ -1573,10 +1574,8 @@ bash &lt;(curl -s https://raw.githubusercontent.com/cms-analysis/CombineHarveste
 <pre><code class="language-shell">scramv1 b clean; scramv1 b
 cmsenv
 </code></pre>
-<p>Finally, let's clone the working directory for this tutorial which contains all of the inputs and scripts needed to run the parametric fitting exercise:</p>
-<pre><code class="language-shell">cd $CMSSW_BASE/src/
-git clone https://gitlab.cern.ch/jlangfor/combinetutorial-2023-parametric.git
-cd combinetutorial-2023-parametric
+<p>Finally, let's move to the working directory for this tutorial which contains all of the inputs and scripts needed to run the parametric fitting exercise:</p>
+<pre><code class="language-shell">cd $CMSSW_BASE/src/HiggsAnalysis/CombinedLimit/data/tutorials/parametric_exercise
 </code></pre>
 <h2 id="session-structure">Session structure</h2>
 <p>The exercise is split into six parts which cover:</p>
