deploy: edb2f9a93deb197f61ed88a5d664f4dac5c5a18f

--- a/what_combine_does/model_and_likelihood/index.html
+++ b/what_combine_does/model_and_likelihood/index.html
@@ -1592,8 +1592,8 @@
 <p>The observation model, <span class="arithmatex"><span class="MathJax_Preview">\mathcal{M}( \vec{\Phi})</span><script type="math/tex">\mathcal{M}( \vec{\Phi})</script></span> defines the probability for any set of observations given specific values of the input parameters of the model <span class="arithmatex"><span class="MathJax_Preview">\vec{\Phi}</span><script type="math/tex">\vec{\Phi}</script></span>.
 The probability for any observed data is denoted:</p>
 <div class="arithmatex">
-<div class="MathJax_Preview"> p_{\mathcal{M}}(\mathrm{data}; \vec{\Phi}_0 ) </div>
-<script type="math/tex; mode=display"> p_{\mathcal{M}}(\mathrm{data}; \vec{\Phi}_0 ) </script>
+<div class="MathJax_Preview"> p_{\mathcal{M}}(\mathrm{data}; \vec{\Phi} ) </div>
+<script type="math/tex; mode=display"> p_{\mathcal{M}}(\mathrm{data}; \vec{\Phi} ) </script>
 </div>
 <p>where the subscript <span class="arithmatex"><span class="MathJax_Preview">\mathcal{M}</span><script type="math/tex">\mathcal{M}</script></span> is given here to remind us that these are the probabilities according to this particular model (though usually we will omit it for brevity).</p>
 <p>Combine is designed for counting experiments, where the number of events with particular features are counted.
