--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <title>Redirecting</title>
   <noscript>
-    <meta http-equiv="refresh" content="1; url=latest/" />
+    <meta http-equiv="refresh" content="1; url=v10.3.1/" />
   </noscript>
   <script>
     window.location.replace(
-      "latest/" + window.location.search + window.location.hash
+      "v10.3.1/" + window.location.search + window.location.hash
     );
   </script>
 </head>
 <body>
-  Redirecting to <a href="latest/">latest/</a>...
+  Redirecting to <a href="v10.3.1/">v10.3.1/</a>...
 </body>
 </html>
